--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.9.4",
     "bootstrap": "^4.5.3",
+    "firebase-admin": "^9.4.2",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
